# loraforge

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: questions.json
loraforge/: __init__.py  __main__.py
loraforge/data/: __init__.py  augment.py  loader.py  splitter.py
loraforge/eval/: __init__.py  compare.py  stats.py
loraforge/train/: __init__.py  hyperparam.py  lora.py  monitor.py  qlora.py
scripts/: evaluate.py  prepare_data.py  train.py
tests/: test_data.py  test_eval.py
